<resources>
    <string name="app_name">OlivaMed</string>
    <string name="login_but">Войти</string>
    <string name="hello_oliva">ОЛИВАМЕД</string>
    <string name="skip"><u>Пропустить</u></string>
    <string name="hello">Добро пожаловать!</string>
    <string name="search">Поиск</string>
    <string name="our_doctrors">Наши врачи</string>
    <string name="stock">Акции</string>
    <string name="description_stock">Чтобы не пропускать выгодные предложения отслеживайте актуальные мероприятия.</string>
    <string name="description_add_list">С нами ваше здоровье становится исключительным событием, а забота - невероятным опытом!</string>
    <string name="add_list">Запись</string>
    <string name="add_list2">Записаться</string>
    <string name="information_about_us">Информация о нас</string>
    <string name="adres">638500, г.Ростов-на-Дону, ул. Тургеневская, 12</string>
    <string name="telephone_number">+7 (383) 290-34-34</string>
    <string name="grafik">График работы: пн-пт: 8:00 - 20:00 cб,вс: выходные дни </string>
    <string name="add_list_priem">Запись на прием</string>
    <string name="add_list_another_person">Запись для другого человека</string>
    <string name="politic">Согласен(а) с политикой конфиденциальности</string>
    <string name="my_history">Моя история</string>
    <string name="histori_default">Тут появится Ваша история</string>
    <string name="histori_now_default">Тут появятся Ваши записи</string>
    <string name="nowHistory"><u>Мои записи</u></string>
    <string name="my_history_now"><u>Моя история</u></string>
    <string name="policiC">Политика конфиденциальности</string>
    <string name="politic_text">Медицинская клиника "Олива-Мед" (далее - Клиника) привержена защите конфиденциальности персональных данных своих пациентов и посетителей сайта. Эта Политика конфиденциальности описывает, как Клиника собирает, использует, раскрывает и защищает персональные данные, которые вы предоставляете через наш сайт. Персональные данные, которые мы собираем Клиника собирает следующие персональные данные:
\n• Имя, фамилия и отчество
\n• Адрес электронной почты
\n• Номер телефона
\n• Другая информация, которую вы предоставляете нам добровольно, например, при заполнении формы обратной связи или записи на прием
Как мы собираем персональные данные?
Мы собираем персональные данные следующими способами:
\n• Через наш сайт, когда вы заполняете форму обратной связи или записываетесь на прием
\n• По телефону или электронной почте, когда вы связываетесь с нами для получения информации или записи на прием
\n• Лично, когда вы посещаете нашу Клинику
Как мы используем персональные данные?
Мы используем персональные данные для следующих целей:
\n• Обработка вашего запроса или записи на прием
\n• Предоставление вам информации о наших услугах и акциях
\n• Улучшение нашего сайта и услуг
\n• Соблюдение требований законодательства
Как мы раскрываем персональные данные?
Мы не раскрываем ваши персональные данные третьим лицам, за исключением следующих случаев:
\n• Когда это требуется по закону или судебному решению
\n• Когда это необходимо для предоставления вам услуг, например, для записи на прием к врачу
\n• Когда мы получаем ваше явное согласие на раскрытие
        \n
Защита персональных данных
Клиника принимает все необходимые меры для защиты ваших персональных данных от несанкционированного доступа, использования, раскрытия, изменения или уничтожения. Мы используем физические, технические и административные меры безопасности, соответствующие отраслевым стандартам. Хранение персональных данных
Мы храним ваши персональные данные только до тех пор, пока это необходимо для указанных в этой Политике целей. После истечения срока хранения мы надежно уничтожаем или обезличиваем ваши персональные данные. Ваши права
Вы имеете следующие права в отношении ваших персональных данных:
\n• Право на доступ к вашим персональным данным
\n• Право на исправление или удаление ваших персональных данных
\n• Право на ограничение обработки ваших персональных данных
\n• Право на отзыв согласия на обработку ваших персональных данных
Если вы хотите воспользоваться любым из этих прав, свяжитесь с нами по указанным ниже контактам. Изменения в Политике конфиденциальности
Клиника может вносить изменения в эту Политику конфиденциальности время от времени. Мы рекомендуем вам периодически просматривать эту Политику, чтобы быть в курсе любых изменений. Контакты
Если у вас есть какие-либо вопросы или жалобы по поводу нашей Политики конфиденциальности, свяжитесь с нами по следующим контактам:  \n Адрес: улица Зорге 16/190
\n Телефон: +7 988 255 5077
\n Электронная почта: olivamedeco@gmail.com</string>

<string name="fioDoctor">Ушакова Валерия Сергеевна</string>
    <string name="doljnostDoctor">Заведующая отделением гинекологии</string>
    <string name="aboutDoctor">О враче</string>
    <string name="descripthionDoctor">Высококвалифицированный специалист с большим опытом работы. Она обладает превосходными навыками в области гинекологии и даром общения с пациентками. Ее заботливый и эмпатичный подход помогает пациенткам чувствовать себя комфортно и уверенно. Она всегда готова выслушать и помочь каждой женщине, обратившейся к ней за помощью.
        Также является наставником для молодых врачей, делится своим опытом и всегда старается вдохновить коллег на профессиональный и личностный рост.</string>
    <string name="otziv">Отзывы</string>
    <string name="no_otziv">Отзывов пока нет</string>
    <string name="job_text">Вакансии</string>
    <string name="doctor_uzi">Врач-Узист</string>
    <string name="doctor_masazh">Массажист</string>
    <string name="doctor_terapevt">Терапевт</string>
    <string name="doctor_dietolog">Диетолог</string>
    <string name="doctor_psiholog">Психолог</string>
    <string name="doctor_description">Оригинальная вакансия специалиста проффесионала</string>
    <string name="voprosi_otveti">Вопрос-ответ</string>
    <string name="vopros1">Как и куда можно принести продукты или вещи человеку в больницу?</string>
    <string name="vopros2">Как у вас происходит процесс записи на прием?</string>
    <string name="vopros3">Почему стоит выбрать нас?</string>
    <string name="vopros4">Какие способы записи существуют?</string>
    <string name="vopros5">Какие услуги вы не оказываете?</string>
    <string name="otvet">Вы оставляете свои данные на форме сайта</string>
    <string name="usluga1">УЗИ (ультразвуковое исследование)</string>
    <string name="usluga2">Рентгенологические исследования</string>
    <string name="usluga3">ЭКГ (электрокардиография)</string>
    <string name="usluga4">Лабораторные анализы крови и мочи</string>
    <string name="usluga5">Консультации специалистов (терапевт, кардиолог, невролог и т.д.)</string>
    <string name="usluga6">Массаж и физиотерапия</string>
    <string name="usluga7">Процедуры по уходу за зубами</string>
    <string name="usluga8">Вакцинация и иммунизация</string>
    <string name="contacts">Наша миссия - обеспечить доступную и высококачественную медицинскую помощь каждому пациенту, создавая комфортную и доверительную атмосферу. Мы всегда рады помочь вам! Свяжитесь с нами для записи на прием, получения консультации или уточнения информации о наших услугах.
\nНаши контакты:
\n• Адрес:улица Зорге 16/190
\n• Телефон: +7 988 255 5077
\n• Email: olivamedeco@gmail.com
\nЧасы работы:
\n• 08:00-20:00</string>
    <string name="sale_text">Клиника "Олива-Мед" регулярно проводит акции, направленные на повышение доступности медицинских услуг и улучшение здоровья населения. Эти акции включают:
\n• Скидки на медицинские услуги: скидки на широкий спектр медицинских услуг, включая консультации специалистов и диагностические процедуры.
\n• Бесплатные консультации: Клиника проводит бесплатные консультации по различным медицинским вопросам, включая профилактику заболеваний, лечение хронических заболеваний и здоровый образ жизни.
\n• Семейные скидки: Клиника предлагает семейные скидки, позволяя семьям экономить на медицинских услугах.
\n• Социальные скидки: Клиника предоставляет скидки социально незащищенным слоям населения, таким как пенсионеры, инвалиды и малоимущие.
\nАкции клиники "Олива-Мед" направлены на то, чтобы сделать медицинскую помощь более доступной и привлекательной для всех. Клиника стремится предоставлять качественные медицинские услуги по доступным ценам, помогая пациентам улучшить свое здоровье и благополучие.</string>

</resources>