<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"


    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:contex=".Doctor"
    android:background="@color/base_theme"
    android:orientation="vertical">

    <ScrollView
        android:id="@+id/scrolldoctorview"
        android:layout_width="match_parent"
        android:layout_height="550dp"
        android:background="@drawable/antiroundcorners"
        android:backgroundTint="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/fioDoctor"
                android:textColor="@color/dark_theme"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:text="@string/doljnostDoctor"
                android:textColor="@color/dark_theme"
                android:textSize="18dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="15dp"
                android:text="@string/aboutDoctor"
                android:textColor="@color/dark_theme"
                android:textSize="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="10dp"
                android:text="@string/descripthionDoctor"
                android:textSize="16dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="15dp"
                android:text="@string/otziv"
                android:textColor="@color/dark_theme"
                android:textSize="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="15dp"
                android:text="@string/no_otziv"
                android:textSize="18dp" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="15dp"
                android:hint="Оставить отзыв"/>


        </LinearLayout>
    </ScrollView>




    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:background="@color/base_theme"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <ImageButton
            android:id="@+id/imageButtonMainHome"
            android:onClick="goTobase"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="20dp"
            android:backgroundTint="@color/invise"
            app:srcCompat="@drawable/home_dark_foreground" />

        <ImageButton
            android:id="@+id/imageButtonAddList"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginRight="20dp"
            android:backgroundTint="@color/invise"
            app:srcCompat="@drawable/add_list_dark_foreground" />

        <ImageButton
            android:id="@+id/imageButtonChat"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginRight="20dp"
            android:backgroundTint="@color/invise"
            app:srcCompat="@drawable/message_dark_foreground" />

        <ImageButton
            android:id="@+id/imageButtonHistory"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginRight="20dp"
            android:backgroundTint="@color/invise"
            app:srcCompat="@drawable/history_dark_foreground" />

        <ImageButton
            android:id="@+id/imageButtonPeople"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginRight="5dp"
            android:backgroundTint="@color/invise"
            app:srcCompat="@drawable/people_dark_foreground" />


    </LinearLayout>


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="130dp"
        android:layout_height="187dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="50dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toTopOf="@+id/scrolldoctorview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/imageViewdoctor"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/doctor4"
            tools:ignore="ContentDescription" />
    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>