<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/base_theme"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button_login"
        android:onClick="goToAutorization"
        android:layout_width="124dp"
        android:layout_height="67dp"
        android:layout_marginTop="564dp"
        android:background="@drawable/roundstyle"
        android:backgroundTint="@color/white"
        android:text="@string/login_but"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView2" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="378dp"
        android:layout_height="564dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.578"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="171dp"
        android:layout_height="36dp"
        android:layout_marginStart="103dp"
        android:layout_marginTop="476dp"
        android:layout_marginEnd="104dp"
        android:text="@string/hello_oliva"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textSize="26sp"
        app:layout_constraintBottom_toTopOf="@+id/button_login"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.115" />

    <Button
        android:id="@+id/button_skip"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="131dp"
        android:layout_height="50dp"
        android:layout_marginTop="76dp"
        android:backgroundTint="@color/base_theme"
        android:onClick="goTobase"
        android:text="@string/skip"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/button_login"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>